fix alignment issue and text

--- a/styles.css
+++ b/styles.css
@@ -160,13 +160,13 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 1rem;
 }
 
 .container__inner--header-type {
   font-size: 1.3rem;
   font-weight: 500;
   text-transform: capitalize;
-  margin-bottom: 2rem;
 }
 
 .container__inner--text {
